# Gulasscard

./: .gitignore  README.md  app.py  pyproject.toml
conflib/: __init__.py
gulasscard/: __init__.py  index.py
