[tool.poetry]
name = "gulasscard"
version = "0.1.0"
description = ""
authors = ["kjhishere1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"
beautifulsoup4 = "^4.11.1"
urllib3 = "^1.26.12"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"